# rainbow_ls

./: Cargo.toml  LICENSE  README.md
src/: config.rs  display.rs  filetype.rs  main.rs  mod.rs  parse.rs  parser.rs  subparsers.rs  utils.rs
src/args/: config.rs  mod.rs
src/args/help/: help.rs
src/args/subparsers/: mod.rs  subparsers.rs
src/display/: display.rs  filetype.rs  long_listing.rs  main.rs  mod.rs  multiline.rs  one_line.rs  one_per_line.rs  utils.rs
src/display/filetype/: filetype.rs  mod.rs
src/display/sort_by/: mod.rs  sort_by.rs
src/parser/: config.rs  help.rs  mod.rs  subparsers.rs
src/parser/help/: help.rs  mod.rs
src/parser/subparsers/: mod.rs  subparsers.rs
src/types/: color_entry.rs  coloured_entry.rs  config.rs  entry.rs  long_listing_entry.rs  mod.rs  rgb_color.rs
