[package]
name = "rainbow_ls"
version = "0.1.0"
authors = ["Saphielle Akiyama <saphielle.akiyama@gmail.com>", "Bijij <josh@josh-is.gay>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "0.3.2"
unicode-segmentation = "1.7.1"
chrono = "0.4"
regex = "1"
libc = "0.2.81"
clap = { version = "4.4", features = ["derive"] }